# latinoc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.toml
compiler/latinoc/: Cargo.toml
compiler/latinoc_ast/: Cargo.toml  README.md
compiler/latinoc_builtin_macros/: Cargo.toml
compiler/latinoc_builtin_macros/src/: asm.rs  assert.rs  cfg.rs  cfg_accessible.rs  cfg_eval.rs  cmdline_attrs.rs  compile_error.rs  concat.rs  concat_idents.rs  derive.rs  env.rs  format.rs  format_foreign.rs  global_allocator.rs  lib.rs  llvm_asm.rs  log_syntax.rs  panic.rs  proc_macro_harness.rs  source_util.rs  standard_library_imports.rs  test.rs  test_harness.rs  trace_macros.rs  util.rs
compiler/latinoc_builtin_macros/src/deriving/: bounds.rs  clone.rs  debug.rs  decodable.rs  default.rs  encodable.rs  hash.rs  mod.rs
compiler/latinoc_builtin_macros/src/deriving/cmp/: eq.rs  ord.rs  partial_eq.rs  partial_ord.rs
compiler/latinoc_builtin_macros/src/deriving/generic/: mod.rs  ty.rs
compiler/latinoc_builtin_macros/src/format_foreign/printf/: tests.rs
compiler/latinoc_codegen_llvm/: Cargo.toml
compiler/latinoc_driver/: Cargo.toml
compiler/latinoc_expand/: Cargo.toml
compiler/latinoc_expand/src/: base.rs  build.rs  config.rs  expand.rs  lib.rs  mbe.rs  module.rs  placeholders.rs  proc_macro.rs  proc_macro_server.rs  tests.rs
compiler/latinoc_expand/src/mbe/: macro_check.rs  macro_parser.rs  macro_rules.rs  quoted.rs  transcribe.rs
compiler/latinoc_expand/src/mut_visit/: tests.rs
compiler/latinoc_expand/src/parse/: tests.rs
compiler/latinoc_expand/src/tokenstream/: tests.rs
compiler/latinoc_interface/: Cargo.toml
compiler/latinoc_lexer/: Cargo.toml
compiler/latinoc_lexer/src/: lib.rs  tests.rs  unescape.rs
compiler/latinoc_lexer/src/unescape/: tests.rs
compiler/latinoc_lint/: Cargo.toml
compiler/latinoc_parse/: Cargo.toml
compiler/latinoc_parse/src/: lib.rs  validate_attr.rs
compiler/latinoc_parse/src/lexer/: mod.rs  tokentrees.rs  unescape_error_reporting.rs  unicode_chars.rs
compiler/latinoc_parse/src/parser/: attr.rs  attr_wrapper.rs  diagnostics.rs  expr.rs  generics.rs  item.rs  mod.rs  nonterminal.rs  pat.rs  path.rs  stmt.rs  ty.rs
compiler/latinoc_span/: Cargo.toml
compiler/latinoc_typeck/: Cargo.toml
compiler/rustc_ast/: Cargo.toml
compiler/rustc_ast_lowering/: Cargo.toml
compiler/rustc_ast_passes/: Cargo.toml
compiler/rustc_ast_pretty/: Cargo.toml
compiler/rustc_attr/: Cargo.toml
compiler/rustc_attr/src/: builtin.rs  lib.rs
compiler/rustc_borrowck/: Cargo.toml
compiler/rustc_builtin_macros/: Cargo.toml
compiler/rustc_codegen_ssa/: Cargo.toml
compiler/rustc_const_eval/: Cargo.toml
compiler/rustc_errors/: Cargo.toml
compiler/rustc_expand/: Cargo.toml
compiler/rustc_feature/: Cargo.toml
compiler/rustc_hir/: Cargo.toml
compiler/rustc_hir_pretty/: Cargo.toml
compiler/rustc_hir_pretty/src/: lib.rs
compiler/rustc_incremental/: Cargo.toml
compiler/rustc_incremental/src/: assert_dep_graph.rs  assert_module_sources.rs
compiler/rustc_incremental/src/persist/: dirty_clean.rs
compiler/rustc_infer/: Cargo.toml
compiler/rustc_lint_defs/: Cargo.toml
compiler/rustc_lint_defs/src/: builtin.rs  lib.rs
compiler/rustc_llvm/: build.rs
compiler/rustc_metadata/: Cargo.toml
compiler/rustc_metadata/src/: creader.rs  locator.rs  native_libs.rs
compiler/rustc_metadata/src/rmeta/: decoder.rs  def_path_hash_map.rs  encoder.rs  mod.rs
compiler/rustc_metadata/src/rmeta/decoder/: cstore_impl.rs
compiler/rustc_middle/: Cargo.toml
compiler/rustc_mir_build/: Cargo.toml
compiler/rustc_mir_dataflow/: Cargo.toml
compiler/rustc_mir_transform/: Cargo.toml
compiler/rustc_monomorphize/: Cargo.toml
compiler/rustc_parse_format/: Cargo.toml
compiler/rustc_passes/: Cargo.toml
compiler/rustc_passes/src/: check_attr.rs  check_const.rs  dead.rs  diagnostic_items.rs  entry.rs  hir_id_validator.rs  hir_stats.rs  intrinsicck.rs  lang_items.rs  layout_test.rs  lib_features.rs  liveness.rs  loops.rs  naked_functions.rs  region.rs  stability.rs  upvars.rs  weak_lang_items.rs
compiler/rustc_plugin_impl/: Cargo.toml
compiler/rustc_plugin_impl/src/: lib.rs  load.rs
compiler/rustc_privacy/: Cargo.toml
compiler/rustc_privacy/src/: lib.rs
compiler/rustc_query_impl/: Cargo.toml
compiler/rustc_query_system/: Cargo.toml
compiler/rustc_resolve/: Cargo.toml
compiler/rustc_resolve/src/: build_reduced_graph.rs  check_unused.rs  def_collector.rs  diagnostics.rs  imports.rs  late.rs  lib.rs  macros.rs
compiler/rustc_resolve/src/late/: diagnostics.rs  lifetimes.rs
compiler/rustc_save_analysis/: Cargo.toml
compiler/rustc_save_analysis/src/: dump_visitor.rs  lib.rs  sig.rs  span_utils.rs
compiler/rustc_session/: Cargo.toml
compiler/rustc_session/src/: cgu_reuse_tracker.rs  config.rs  cstore.rs  filesearch.rs  lib.rs  options.rs  output.rs  parse.rs  search_paths.rs  session.rs  utils.rs
compiler/rustc_symbol_mangling/: Cargo.toml
compiler/rustc_target/: Cargo.toml
compiler/rustc_trait_selection/: Cargo.toml
compiler/rustc_trait_selection/src/: autoderef.rs  infer.rs  opaque_types.rs
compiler/rustc_trait_selection/src/traits/: codegen.rs  coherence.rs  const_evaluatable.rs  mod.rs  object_safety.rs  on_unimplemented.rs  project.rs  structural_match.rs  util.rs  wf.rs
compiler/rustc_trait_selection/src/traits/error_reporting/: mod.rs  on_unimplemented.rs  suggestions.rs
compiler/rustc_trait_selection/src/traits/query/type_op/: custom.rs
compiler/rustc_trait_selection/src/traits/select/: confirmation.rs  mod.rs
compiler/rustc_trait_selection/src/traits/specialize/: mod.rs
compiler/rustc_traits/: Cargo.toml
compiler/rustc_ty_utils/: Cargo.toml
src/bootstrap/: bootstrap.py  build.rs  builder.rs  check.rs  compile.rs  config.rs  dist.rs  doc.rs  install.rs  lib.rs  setup.rs  test.rs  tool.rs  toolstate.rs  util.rs
src/librustdoc/: config.rs  core.rs  doctest.rs  externalfiles.rs  lib.rs  lint.rs  markdown.rs  scrape_examples.rs  visit_ast.rs  visit_lib.rs
src/tools/: .lat_historial
(+1016 files in other folders)
