[package]
name = "latinoc_expand"
version = "0.0.0"
edition = "2021"
build = false

[lib]
doctest = false

[dependencies]
rustc_serialize = { path = "../rustc_serialize" }
tracing = "0.1"
latinoc_span = { path = "../latinoc_span" }
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_ast_passes = { path = "../rustc_ast_passes" }
rustc_attr = { path = "../rustc_attr" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_errors = { path = "../rustc_errors" }
rustc_feature = { path = "../rustc_feature" }
rustc_lint_defs = { path = "../rustc_lint_defs" }
rustc_macros = { path = "../rustc_macros" }
latinoc_lexer = { path = "../latinoc_lexer" }
latinoc_parse = { path = "../latinoc_parse" }
rustc_session = { path = "../rustc_session" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
latinoc_ast = { path = "../latinoc_ast" }
