[package]
name = "latinoc_parse"
version = "0.1.0"
authors = ["Equipo del proyecto latino"]
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
tracing = "0.1"
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_feature = { path = "../rustc_feature" }
latinoc_lexer = { path = "../latinoc_lexer" }
rustc_errors = { path = "../rustc_errors" }
rustc_session = { path = "../rustc_session" }
latinoc_span = { path = "../latinoc_span" }
latinoc_ast = { path = "../latinoc_ast" }
unicode-normalization = "0.1.11"
unicode-width = "0.1.4"

