[package]
name = "rustc_attr"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_serialize = { path = "../rustc_serialize" }
rustc_errors = { path = "../rustc_errors" }
latinoc_span = { path = "../latinoc_span" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_feature = { path = "../rustc_feature" }
latinoc_lexer = { path = "../latinoc_lexer" }
rustc_macros = { path = "../rustc_macros" }
rustc_session = { path = "../rustc_session" }
latinoc_ast = { path = "../latinoc_ast" }
