[package]
name = "rustc_hir_pretty"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_hir = { path = "../rustc_hir" }
rustc_target = { path = "../rustc_target" }
latinoc_span = { path = "../latinoc_span" }
latinoc_ast = { path = "../latinoc_ast" }
