[package]
name = "rustc_incremental"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rustc_graphviz = { path = "../rustc_graphviz" }
tracing = "0.1"
rand = "0.7"
rustc_middle = { path = "../rustc_middle" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_hir = { path = "../rustc_hir" }
rustc_serialize = { path = "../rustc_serialize" }
latinoc_ast = { path = "../latinoc_ast" }
rustc_macros = { path = "../rustc_macros" }
latinoc_span = { path = "../latinoc_span" }
rustc_fs_util = { path = "../rustc_fs_util" }
rustc_session = { path = "../rustc_session" }
rustc_errors = { path = "../rustc_errors" }
