[package]
name = "rustc_lint_defs"
version = "0.0.0"
edition = "2021"

[dependencies]
latinoc_ast = { path = "../latinoc_ast" }
rustc_data_structures = { path = "../rustc_data_structures" }
latinoc_span = { path = "../latinoc_span" }
rustc_serialize = { path = "../rustc_serialize" }
rustc_macros = { path = "../rustc_macros" }
rustc_target = { path = "../rustc_target" }
