[package]
name = "rustc_passes"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = "0.1"
rustc_middle = { path = "../rustc_middle" }
rustc_attr = { path = "../rustc_attr" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_errors = { path = "../rustc_errors" }
rustc_hir = { path = "../rustc_hir" }
rustc_index = { path = "../rustc_index" }
latinoc_parse = { path = "../latinoc_parse" }
rustc_session = { path = "../rustc_session" }
rustc_target = { path = "../rustc_target" }
latinoc_ast = { path = "../latinoc_ast" }
rustc_serialize = { path = "../rustc_serialize" }
latinoc_span = { path = "../latinoc_span" }
latinoc_lexer = { path = "../latinoc_lexer" }
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_feature = { path = "../rustc_feature" }
