[package]
name = "rustc_plugin_impl"
version = "0.0.0"
build = false
edition = "2021"

[lib]
doctest = false

[dependencies]
rustc_middle = { path = "../rustc_middle" }
rustc_errors = { path = "../rustc_errors" }
rustc_hir = { path = "../rustc_hir" }
latinoc_lint = { path = "../latinoc_lint" }
rustc_metadata = { path = "../rustc_metadata" }
latinoc_ast = { path = "../latinoc_ast" }
rustc_session = { path = "../rustc_session" }
latinoc_span = { path = "../latinoc_span" }
