[package]
name = "rustc_privacy"
version = "0.0.0"
edition = "2021"

[dependencies]
rustc_middle = { path = "../rustc_middle" }
latinoc_ast = { path = "../latinoc_ast" }
rustc_attr = { path = "../rustc_attr" }
rustc_errors = { path = "../rustc_errors" }
rustc_hir = { path = "../rustc_hir" }
latinoc_typeck = { path = "../latinoc_typeck" }
rustc_session = { path = "../rustc_session" }
latinoc_span = { path = "../latinoc_span" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_trait_selection = { path = "../rustc_trait_selection" }
tracing = "0.1"
