[package]
name = "rustc_resolve"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
bitflags = "1.2.1"
tracing = "0.1"
latinoc_ast = { path = "../latinoc_ast" }
rustc_arena = { path = "../rustc_arena" }
rustc_middle = { path = "../rustc_middle" }
rustc_ast_lowering = { path = "../rustc_ast_lowering" }
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_attr = { path = "../rustc_attr" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_errors = { path = "../rustc_errors" }
latinoc_expand = { path = "../latinoc_expand" }
rustc_feature = { path = "../rustc_feature" }
rustc_hir = { path = "../rustc_hir" }
rustc_index = { path = "../rustc_index" }
rustc_metadata = { path = "../rustc_metadata" }
rustc_query_system = { path = "../rustc_query_system" }
rustc_session = { path = "../rustc_session" }
latinoc_span = { path = "../latinoc_span" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
