[package]
name = "rustc_save_analysis"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = "0.1"
rustc_middle = { path = "../rustc_middle" }
latinoc_ast = { path = "../latinoc_ast" }
rustc_ast_pretty = { path = "../rustc_ast_pretty" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_hir = { path = "../rustc_hir" }
rustc_hir_pretty = { path = "../rustc_hir_pretty" }
latinoc_lexer = { path = "../latinoc_lexer" }
serde_json = "1"
rustc_session = { path = "../rustc_session" }
latinoc_span = { path = "../latinoc_span" }
rls-data = "0.19"
rls-span = "0.5"
