[package]
name = "rustc_session"
version = "0.0.0"
edition = "2021"

[dependencies]
getopts = "0.2"
rustc_macros = { path = "../rustc_macros" }
tracing = "0.1"
rustc_errors = { path = "../rustc_errors" }
rustc_feature = { path = "../rustc_feature" }
rustc_hir = { path = "../rustc_hir" }
rustc_target = { path = "../rustc_target" }
rustc_serialize = { path = "../rustc_serialize" }
rustc_data_structures = { path = "../rustc_data_structures" }
latinoc_span = { path = "../latinoc_span" }
rustc_fs_util = { path = "../rustc_fs_util" }
num_cpus = "1.0"
latinoc_ast = { path = "../latinoc_ast" }
rustc_lint_defs = { path = "../rustc_lint_defs" }
