[package]
name = "rustc_trait_selection"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rustc_parse_format = { path = "../rustc_parse_format" }
tracing = "0.1"
rustc_attr = { path = "../rustc_attr" }
rustc_middle = { path = "../rustc_middle" }
latinoc_ast = { path = "../latinoc_ast" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_errors = { path = "../rustc_errors" }
rustc_hir = { path = "../rustc_hir" }
rustc_index = { path = "../rustc_index" }
rustc_infer = { path = "../rustc_infer" }
rustc_lint_defs = { path = "../rustc_lint_defs" }
rustc_macros = { path = "../rustc_macros" }
rustc_query_system = { path = "../rustc_query_system" }
rustc_session = { path = "../rustc_session" }
latinoc_span = { path = "../latinoc_span" }
rustc_target = { path = "../rustc_target" }
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
